halt corrupted styles with multi-saved xlsx document fdo#55418

Change-Id: I2d53c88ab121edeec2bf53f7fd177a0edcc05a25